test/runtime/fail/expr/expected_operand.hy

// expect error: Expected operand in expression, found end of file

let a = 3 +
